# verification-tax

./: CLAUDE.md  main.tex  main_v1_backup.tex  main_v2.tex  references.bib
data/arc_challenge/: all_items.json  results_deepseek-r1-qwen-32b.jsonl  results_gemma-3-27b.jsonl  (+9 more)
outputs_vtax/: vtax_calibration_data.json  vtax_calibration_pipeline.py  vtax_v11_calibrated_review.md
results/: all_benchmarks_table.tex  benchmark_demolition_table.tex  leaderboard_noise_table.tex  named_model_comparison_table.tex  regulatory_table.tex  verification_horizon_table.tex
scripts/: analyze_all_benchmarks.py  analyze_mmlu.py  analyze_truthfulqa.py  exp_active_real.py  exp_benchmark_demolition.py  exp_compositional.py  exp_leaderboard_noise.py  exp_named_model_comparison.py  exp_pipeline_real.py  exp_regulatory_impossibility.py  exp_rigor_bootstrap.py  exp_self_eval_permutation.py  exp_self_eval_zero.py  exp_verification_horizon.py  fig_sun_comparison.py  fix_all_figures.py  mmlu_watchdog.sh  real_model_experiment.py  redesign_figures.py  run_arc_experiment.py  run_batch_a.py  run_batch_b.py  run_batch_c.py  run_batch_d.py  run_hellaswag_experiment.py  run_mass_benchmarks.py  run_mmlu_experiment.py  run_truthfulqa_experiment.py  run_winogrande_experiment.py  sharp_constants.py  synthetic_experiments.py  synthetic_v3.py
supplementary/anonymous_code_src/: README.md  pyproject.toml
supplementary/anonymous_code_src/tests/: test_core.py
supplementary/anonymous_code_src/verification_tools/: __init__.py  core.py
vtax_package/: pyproject.toml
vtax_package/vtax/: __init__.py  core.py
(+61 files in other folders)
